test/error/sema/mut-enum-definition.dsk
let mut E = enum
    A
    B
end
